--- a/src/StringSearching/StringSearching.csproj
+++ b/src/StringSearching/StringSearching.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6F77BBD9-28A8-419E-9275-F0E2C75DE125}</ProjectGuid>
+    <ProjectGuid>{5548381E-592E-44DA-84F5-EBF4774C7D0E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Queue.Locking</RootNamespace>
-    <AssemblyName>Queue.Locking</AssemblyName>
+    <RootNamespace>StringSearching</RootNamespace>
+    <AssemblyName>StringSearching</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -43,15 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Queue.cs" />
+    <Compile Include="BoyerMoore\BoyerMoore.cs" />
+    <Compile Include="BoyerMoore\BadMatchTable.cs" />
+    <Compile Include="IStringSearchAlgorithm.cs" />
+    <Compile Include="LinearStringSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringSearchMatch.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Queue.Common\Queue.Common.csproj">
-      <Project>{E6346BA0-87B3-440B-A590-54DEB9215FD1}</Project>
-      <Name>Queue.Common</Name>
+    <ProjectReference Include="..\Tracker\Tracker.csproj">
+      <Project>{4695BA37-9807-4265-BAAF-E9D1404F8408}</Project>
+      <Name>Tracker</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
